--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
             <h2 class="projects-title">Projects</h2>
             <ul class="projects-list">
                 <li><span class="dot"></span><a href="https://docs.google.com/document/d/1JSBPkXl_SRYdCyEo5RYXZ1wYJgUFFNRge3Hm1JNtai0/edit?tab=t.0">1st assignment(Find me)</a></li>
+                <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/dungeon-crawl.html">2nd assignment(Dungeon Crawl)</a></li>
             </ul>
         </div>
     </div>
