--- a/index.html
+++ b/index.html
@@ -236,15 +236,16 @@
       this.textContent = body.classList.contains('light-mode') ? 'Dark mode' : 'Light mode';
     });
 
-    fetch("https://script.google.com/macros/s/AKfycbyUO9bp4ouzYmtlHwsw3Zxyfz0zZa5RkHYb--tRb2Xp0amtkUCdB4ZNJ8Pyrk22V1daEw/exec?json=true")
-      .then(res => res.json())
-      .then(data => {
-        document.getElementById("grade-badge").innerText =
-          `📊 ${data.earned}/${data.possible} • 🎯 ${data.weightedGrade}%`;
-      })
-      .catch(() => {
-        document.getElementById("grade-badge").innerText = "❌ Grade not loaded";
-      });
+    fetch("https://script.google.com/macros/s/AKfycbyUO9bp4ouzYmtlHwsw3Zxyfz0zZa5RkHYb--tRb2Xp0amtkUCdB4ZNJ8Pyrk22V1daEw/exec")
+  .then(res => res.json())
+  .then(data => {
+    document.getElementById("grade-badge").innerText =
+      `📊 ${data.earned}/${data.possible} • 🎯 ${data.weightedGrade}%`;
+  })
+  .catch(err => {
+    console.error("Fetch failed:", err);
+    document.getElementById("grade-badge").innerText = "❌ Grade not loaded";
+  });
   </script>
 </body>
 </html>
