--- a/index.html
+++ b/index.html
@@ -235,8 +235,7 @@
       body.classList.toggle('light-mode');
       this.textContent = body.classList.contains('light-mode') ? 'Dark mode' : 'Light mode';
     });
-
-    fetch("https://script.google.com/macros/s/AKfycbyUO9bp4ouzYmtlHwsw3Zxyfz0zZa5RkHYb--tRb2Xp0amtkUCdB4ZNJ8Pyrk22V1daEw/exec")
+fetch("/api/grade")
   .then(res => res.json())
   .then(data => {
     document.getElementById("grade-badge").innerText =
@@ -246,6 +245,7 @@
     console.error("Fetch failed:", err);
     document.getElementById("grade-badge").innerText = "❌ Grade not loaded";
   });
+
   </script>
 </body>
 </html>
