--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 <body>
 
   <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 30px;">
-    <div class="grade-badge" id="grade-badge">📊 Loading...</div>
+    <div class="grade-badge" id="grade-summary">📊 Loading...</div>
   </div>
 
   <div class="container">
@@ -235,17 +235,28 @@
       body.classList.toggle('light-mode');
       this.textContent = body.classList.contains('light-mode') ? 'Dark mode' : 'Light mode';
     });
-fetch("/api/grade")
-  .then(res => res.json())
-  .then(data => {
-    document.getElementById("grade-badge").innerText =
-      `📊 ${data.earned}/${data.possible} • 🎯 ${data.weightedGrade}%`;
-  })
-  .catch(err => {
-    console.error("Fetch failed:", err);
-    document.getElementById("grade-badge").innerText = "❌ Grade not loaded";
-  });
+  
+    const gradesUrl = 'https://script.google.com/macros/s/AKfycbyUO9bp4ouzYmtlHwsw3Zxyfz0zZa5RkHYb--tRb2Xp0amtkUCdB4ZNJ8Pyrk22V1daEw/exec?json=true';
 
+  fetch(gradesUrl)
+    .then(response => response.json())
+    .then(data => {
+      const summary = {
+        percentage: data.weightedGrade + '%',
+        fraction: data.earned + '/' + data.possible
+      };
+      const summaryDiv = document.getElementById('grade-summary');
+      summaryDiv.innerHTML = `
+        <strong>Grade Summary</strong><br/>
+        ${summary.percentage} (${summary.fraction})
+      `;
+    })
+    .catch(error => {
+      console.error('Error fetching grades:', error);
+      document.getElementById('grade-summary').textContent = '❌ Grade not loaded';
+    });
+
+    
   </script>
 </body>
 </html>
