--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
         <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/dungeon-crawl.html">3rd assignment (Dungeon Crawl)</a></li>
         <li><span class="dot"></span><a href="https://drive.google.com/drive/folders/1jzSHDe7gz137THYquP4C2ZnXqbs_BpUq?usp=share_link">4th assignment (Virtual Library)</a></li>
         <li><span class="dot"></span><a href="https://docs.google.com/document/d/1sD1B-1KIX2GqvDEltTnetmdmrswmLBYRpl5QXd09zOY/edit?usp=sharing">6th assignment (Cryptography Project)</a></li>
+        <li><span class="dot"></span><a href="https://docs.google.com/document/d/1YgOkQiTaUHCGrP-ZL1WIybyZNpRlTREDW-DtDp0DF44/edit?usp=sharing">7th assignment (App script)</a></li>
       </ul>
     </div>
   </div>
