--- a/index.html
+++ b/index.html
@@ -131,17 +131,6 @@
       margin-left: 15px;
     }
 
-    .grade-badge {
-      font-size: 14px;
-      padding: 6px 12px;
-      border-radius: 20px;
-      background-color: #222;
-      color: #0f0;
-      border: 1px solid #555;
-      margin-right: 15px;
-      white-space: nowrap;
-    }
-
     @media (max-width: 768px) {
       .container {
         grid-template-columns: 1fr;
@@ -183,25 +172,17 @@
       color: #000;
     }
 
-    body.light-mode .grade-badge {
-      background-color: #eee;
-      color: #007BFF;
-      border-color: #ccc;
-    }
+  
   </style>
 </head>
 <body>
 
-  <iframe 
-  src="https://script.google.com/macros/s/AKfycbyUO9bp4ouzYmtlHwsw3Zxyfz0zZa5RkHYb--tRb2Xp0amtkUCdB4ZNJ8Pyrk22V1daEw/exec"
-  style="border: none; width: 280px; height: 60px; border-radius: 10px; margin-bottom: 20px;"
-  title="Grade Widget">
-</iframe>
+ <div style="text-align: center; padding: 20px;">
+    <h2>📊 Current Course Grade</h2>
+    <h1 id="finalGrade" style="font-size: 64px; color: #4285f4;">Loading...</h1>
+    <p id="pointsEarned">Points Earned: ...</p>
+</div>
 
-
-  <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 30px;">
-    <div class="grade-badge" id="grade-summary">📊 Loading...</div>
-  </div>
 
   <div class="container">
     <div class="intro-section">
@@ -245,21 +226,16 @@
       this.textContent = body.classList.contains('light-mode') ? 'Dark mode' : 'Light mode';
     });
   
-   fetch('https://script.google.com/macros/s/AKfycbyUO9bp4ouzYmtlHwsw3Zxyfz0zZa5RkHYb--tRb2Xp0amtkUCdB4ZNJ8Pyrk22V1daEw/exec?json=true')
-    .then(response => response.json())
-    .then(data => {
-      const summary = {
-        percentage: data.weightedGrade + '%',
-        fraction: data.earned + '/' + data.possible
-      };
-      document.getElementById('grade-summary').innerHTML =
-        `<strong>Grade Summary</strong><br>${summary.percentage} (${summary.fraction})`;
-    })
-    .catch(error => {
-      console.error('Error fetching grade:', error);
-      document.getElementById('grade-summary').textContent = '❌ Error loading grade';
-    });
-
+   fetch("AKfycbxnSG-uVlYCI9Jko1FF-0DT1pLHrfS1y5yUl5n-_DyFy_FjgG0ZQEoUk_k0TM9RPrNq")
+  .then(response => response.json())
+  .then(data => {
+    document.getElementById('finalGrade').textContent = data.finalGrade + "%";
+    document.getElementById('pointsEarned').textContent = `Points Earned: ${data.earnedPoints} / ${data.totalPoints}`;
+  })
+  .catch(error => {
+    document.getElementById('finalGrade').textContent = "Error!";
+    console.error(error);
+  });
     
   </script>
 </body>
