--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       this.textContent = body.classList.contains('light-mode') ? 'Dark mode' : 'Light mode';
     });
   
-   fetch("AKfycbxnSG-uVlYCI9Jko1FF-0DT1pLHrfS1y5yUl5n-_DyFy_FjgG0ZQEoUk_k0TM9RPrNq")
+   fetch("https://script.google.com/macros/s/AKfycbxnSG-uVlYCI9Jko1FF-0DT1pLHrfS1y5yUl5n-_DyFy_FjgG0ZQEoUk_k0TM9RPrNq/exec")
   .then(response => response.json())
   .then(data => {
     document.getElementById('finalGrade').textContent = data.finalGrade + "%";
