--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
 </head>
 <body>
 
- <div style="text-align: center; padding: 20px;">
-    <h2>📊 Current Course Grade</h2>
-    <h1 id="finalGrade" style="font-size: 64px; color: #4285f4;">Loading...</h1>
-    <p id="pointsEarned">Points Earned: ...</p>
+ <div style="position: absolute; top: 50px; right: 50px; background-color: #1e1e1e; padding: 20px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.5); width: 250px; text-align: center;">
+    <h2 style="font-size: 20px;">📊 Current Course Grade</h2>
+    <h1 id="finalGrade" style="font-size: 40px; color: #4285f4;">Loading...</h1>
+    <p id="pointsEarned" style="font-size: 16px;">Points Earned: ...</p>
 </div>
 
 
