--- a/index.html
+++ b/index.html
@@ -177,27 +177,24 @@
 </head>
 <body>
 
-<div id="gradeCard" style="
+  <div id="gradeCard" style="
     position: absolute;
-    top: 50px;
-    right: 50px;
-    padding: 12px 20px;
+    top: 30px;
+    right: 30px;
+    padding: 10px 14px;
     border-radius: 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    box-shadow: 0 0 8px rgba(0,0,0,0.2);
+    box-shadow: 0 0 8px rgba(0,0,0,0.3);
     background-color: var(--card-bg, #f0f0f0);
     color: var(--card-text, #000000);
-    width: 230px;
+    width: 160px; /* <<< Shrunk even smaller */
     text-align: center;
     transition: background-color 0.3s, color 0.3s;
 ">
-    <h3 style="font-size: 18px; margin-bottom: 10px;">
-        📊 Current Course Grade
-    </h3>
-    <h1 id="finalGrade" style="font-size: 36px; margin: 0; color: #4285f4;">Loading...</h1>
-    <p id="pointsEarned" style="margin-top: 8px; font-size: 14px;">Points Earned: ...</p>
+    <h3 style="font-size: 14px; margin: 0 0 8px 0;">Grade Summary</h3>
+    <h1 id="finalGrade" style="font-size: 28px; margin: 0; color: #4285f4;">Loading...</h1>
+    <p id="pointsEarned" style="font-size: 12px; margin: 6px 0 0 0;">( ... / ... )</p>
 </div>
-
 
   <div class="container">
     <div class="intro-section">
