--- a/index.html
+++ b/index.html
@@ -177,23 +177,26 @@
 </head>
 <body>
 
-  <div id="gradeCard" style="
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    padding: 10px 14px;
-    border-radius: 10px;
+<div id="gradeCard" style="
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    padding: 15px;
+    border-radius: 8px;
+    border: 2px solid var(--card-border, #00ffff);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    box-shadow: 0 0 8px rgba(0,0,0,0.3);
-    background-color: var(--card-bg, #f0f0f0);
-    color: var(--card-text, #000000);
-    width: 160px; /* <<< Shrunk even smaller */
+    box-shadow: 0 0 10px var(--card-border, #00ffff);
+    background-color: var(--card-bg, #1a1a1a);
+    color: var(--card-text, #ffffff);
+    width: 155px; /* <<< Just like your content width */
     text-align: center;
+    cursor: pointer;
+    z-index: 1000;
     transition: background-color 0.3s, color 0.3s;
 ">
     <h3 style="font-size: 14px; margin: 0 0 8px 0;">Grade Summary</h3>
-    <h1 id="finalGrade" style="font-size: 28px; margin: 0; color: #4285f4;">Loading...</h1>
-    <p id="pointsEarned" style="font-size: 12px; margin: 6px 0 0 0;">( ... / ... )</p>
+    <h1 id="finalGrade" style="font-size: 24px; margin: 0; color: #00ffff;">Loading...</h1>
+    <p id="pointsEarned" style="font-size: 12px; margin-top: 6px;">( ... / ... )</p>
 </div>
 
   <div class="container">
