--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -131,6 +130,38 @@
       margin-left: 15px;
     }
 
+    #gradeCard {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      padding: 12px 15px;
+      border-radius: 8px;
+      border: 2px solid var(--card-border, #00ffff);
+      box-shadow: 0 0 8px var(--card-border, #00ffff);
+      background-color: var(--card-bg, #1a1a1a);
+      color: var(--card-text, #ffffff);
+      width: 170px;
+      text-align: center;
+      z-index: 1000;
+      transition: background-color 0.3s, color 0.3s;
+    }
+
+    #gradeCard h3 {
+      font-size: 14px;
+      margin-bottom: 8px;
+    }
+
+    #gradeCard h1 {
+      font-size: 28px;
+      margin: 0;
+      color: #4285f4;
+    }
+
+    #gradeCard p {
+      font-size: 12px;
+      margin-top: 6px;
+    }
+
     @media (max-width: 768px) {
       .container {
         grid-template-columns: 1fr;
@@ -171,88 +202,85 @@
     body.light-mode .social-links a {
       color: #000;
     }
-
-  
   </style>
 </head>
 <body>
 
-<div id="gradeCard" style="
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    padding: 15px;
-    border-radius: 8px;
-    border: 2px solid var(--card-border, #00ffff);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    box-shadow: 0 0 10px var(--card-border, #00ffff);
-    background-color: var(--card-bg, #1a1a1a);
-    color: var(--card-text, #ffffff);
-    width: 155px; /* <<< Just like your content width */
-    text-align: center;
-    cursor: pointer;
-    z-index: 1000;
-    transition: background-color 0.3s, color 0.3s;
-">
-    <h3 style="font-size: 14px; margin: 0 0 8px 0;">Grade Summary</h3>
-    <h1 id="finalGrade" style="font-size: 24px; margin: 0; color: #00ffff;">Loading...</h1>
-    <p id="pointsEarned" style="font-size: 12px; margin-top: 6px;">( ... / ... )</p>
+<div id="gradeCard">
+  <h3>Grade Summary</h3>
+  <h1 id="finalGrade">Loading...</h1>
+  <p id="pointsEarned">( ... / ... )</p>
 </div>
 
-  <div class="container">
-    <div class="intro-section">
-      <h1>Welcome.</h1>
-      <div class="bio">
-        <p>Hello, My name is Abdurakhmon and my id is 2417515.</p>
-        <p>It's my second year at Dong-A university</p>
-      </div>
+<div class="container">
+  <div class="intro-section">
+    <h1>Welcome.</h1>
+    <div class="bio">
+      <p>Hello, My name is Abdurakhmon and my id is 2417515.</p>
+      <p>It's my second year at Dong-A university</p>
     </div>
+  </div>
 
-    <div class="projects-section">
-      <h2 class="projects-title">Projects</h2>
-      <ul class="projects-list">
+  <div class="projects-section">
+    <h2 class="projects-title">Projects</h2>
+    <ul class="projects-list">
         <li><span class="dot"></span><a href="https://docs.google.com/document/d/1JSBPkXl_SRYdCyEo5RYXZ1wYJgUFFNRge3Hm1JNtai0/edit?tab=t.0">2st assignment (Find me)</a></li>
         <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/dungeon-crawl.html">3rd assignment (Dungeon Crawl)</a></li>
         <li><span class="dot"></span><a href="https://drive.google.com/drive/folders/1jzSHDe7gz137THYquP4C2ZnXqbs_BpUq?usp=share_link">4th assignment (Virtual Library)</a></li>
         <li><span class="dot"></span><a href="https://docs.google.com/document/d/1sD1B-1KIX2GqvDEltTnetmdmrswmLBYRpl5QXd09zOY/edit?usp=sharing">6th assignment (Cryptography Project)</a></li>
         <li><span class="dot"></span><a href="https://docs.google.com/document/d/1YgOkQiTaUHCGrP-ZL1WIybyZNpRlTREDW-DtDp0DF44/edit?usp=sharing">7th assignment (App script)</a></li>
       </ul>
-    </div>
   </div>
+</div>
 
-  <footer>
-    <div class="social-links">
-      <a href="https://github.com/a-kamilov/" target="_blank" aria-label="GitHub Profile">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor">
-          <path d="M12 0c-6.626 0-12 5.373-12 12...Z" />
-        </svg>
-      </a>
-    </div>
-    <div class="footer-right">
-      <button class="mode-toggle">Light mode</button>
-      <p>©2025 Abdurakhmon Kamilov</p>
-    </div>
-  </footer>
+<footer>
+  <div class="social-links">
+    <a href="https://github.com/a-kamilov/" target="_blank" aria-label="GitHub Profile">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor">
+        <path d="M12 0c-6.626 0-12 5.373-12 12...Z" />
+      </svg>
+    </a>
+  </div>
+  <div class="footer-right">
+    <button class="mode-toggle">Light mode</button>
+    <p>©2025 Abdurakhmon Kamilov</p>
+  </div>
+</footer>
 
-  <script>
-    document.querySelector('.mode-toggle').addEventListener('click', function () {
-      const body = document.body;
-      body.classList.toggle('light-mode');
-      this.textContent = body.classList.contains('light-mode') ? 'Dark mode' : 'Light mode';
-    });
-  
-   fetch("https://script.google.com/macros/s/AKfycbxnSG-uVlYCI9Jko1FF-0DT1pLHrfS1y5yUl5n-_DyFy_FjgG0ZQEoUk_k0TM9RPrNq/exec")
-  .then(response => response.json())
-  .then(data => {
-    document.getElementById('finalGrade').textContent = data.finalGrade + "%";
-    document.getElementById('pointsEarned').textContent = `Points Earned: ${data.earnedPoints} / ${data.totalPoints}`;
-  })
-  .catch(error => {
-    document.getElementById('finalGrade').textContent = "Error!";
-    console.error(error);
+<script>
+  document.querySelector('.mode-toggle').addEventListener('click', function () {
+    const body = document.body;
+    body.classList.toggle('light-mode');
+    this.textContent = body.classList.contains('light-mode') ? 'Dark mode' : 'Light mode';
   });
 
+  fetch("https://script.google.com/macros/s/AKfycbxnSG-uVlYCI9Jko1FF-0DT1pLHrfS1y5yUl5n-_DyFy_FjgG0ZQEoUk_k0TM9RPrNq/exec")
+    .then(response => response.json())
+    .then(data => {
+      document.getElementById('finalGrade').textContent = data.finalGrade + "%";
+      document.getElementById('pointsEarned').textContent = `(${data.earnedPoints} / ${data.totalPoints})`;
+    })
+    .catch(error => {
+      document.getElementById('finalGrade').textContent = "Error!";
+      console.error(error);
+    });
 
-  </script>
+  function detectTheme() {
+    const isDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+    const gradeCard = document.getElementById('gradeCard');
+    if (isDark) {
+      gradeCard.style.setProperty('--card-bg', '#1a1a1a');
+      gradeCard.style.setProperty('--card-text', '#ffffff');
+      gradeCard.style.setProperty('--card-border', '#00ffff');
+    } else {
+      gradeCard.style.setProperty('--card-bg', '#f0f0f0');
+      gradeCard.style.setProperty('--card-text', '#000000');
+      gradeCard.style.setProperty('--card-border', '#00aaaa');
+    }
+  }
+  detectTheme();
+  window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', detectTheme);
+</script>
+
 </body>
 </html>
