--- a/encryption_playground.html
+++ b/encryption_playground.html
@@ -111,6 +111,18 @@
   <button class="btn" onclick="copyOutput()">Copy Output</button>
   <button class="btn" onclick="downloadOutput()">Download .txt</button>
 
+  <footer style="background-color: #1e1e1e; color: white; padding: 30px 20px; margin-top: 40px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+  <h2 style="color: #9b59b6; margin-bottom: 10px;">💬 Feedback from Ladies & Gentlemen</h2>
+  <p style="font-size: 16px; line-height: 1.6;">
+    We saw your team project with my team members and it is quite good, and our conclusion is the Encryption Playground works well and shows strong technical skills. 
+    The interface is simple and the encryption runs smoothly using CryptoJS. 
+    I liked how quickly it processes input with modern algorithms.
+    However, adding some short instructions would help beginners understand each function better. 
+    A small log or side-by-side result view could also improve visibility.
+    Overall, great job, clean, functional, and just needs a few user-friendly touches to be perfect)
+  </p>
+</footer>
+
   <script>
     document.getElementById("fileInput").addEventListener("change", function(e) {
       const file = e.target.files[0];
