--- a/appscript_info.html
+++ b/appscript_info.html
@@ -70,7 +70,7 @@
 
   <header>
     <h1>🚀 Google Apps Script Mastery</h1>
-    <p>Understand. Teach. Apply.</p>
+    <p>Understand. Teach. Apply. by Abu</p>
   </header>
 
   <div class="section">
@@ -85,12 +85,6 @@
       <li><strong>When:</strong> When Google tools need extra functionality or automation</li>
       <li><strong>Where:</strong> Runs in the cloud via script.google.com or inside Google Docs/Sheets</li>
     </ul>
-    <p style="margin-top: 10px;">
-      💬 View the full AI conversation that helped guide this learning:
-      <a href="https://chatgpt.com/share/68132dd6-cec0-8005-869e-fdac3a88dcf9" target="_blank">
-        AI Guidance on Apps Script (ChatGPT)
-      </a>
-    </p>
 
   </div>
 
