--- a/encryption_playground.html
+++ b/encryption_playground.html
@@ -122,6 +122,22 @@
     Overall, great job, clean, functional, and just needs a few user-friendly touches to be perfect)
   </p>
 </footer>
+  <footer style="background-color: #1e1e1e; color: white; padding: 30px 20px; margin-top: 40px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+  <h2 style="color: #9b59b6; margin-bottom: 10px;">💬 Feedback from GG</h2>
+  <p style="font-size: 16px; line-height: 1.6;">
+    Encryption Playground – Review
+  What’s Good:
+  Clean, user-friendly design.
+  Real-time encryption and decryption 
+  Supports multiple algorithms like Caesar and Vigenère Ciphers.
+  Easy to understand (the explanations are helpful) and great for beginners.
+  Engaging, hands-on learning experience.
+  What Could Be Improved:
+  Include user accounts to track progress and save past sessions.
+  Completely depends on person but maybe adding some color would make the site look more fun and make the user eager to try it( it would work on me for sure lol) 
+  Overall, the Encryption Playground is helpful and educational tool for those who are interested in the cryptography. It’s looks good.
+  </p>
+</footer>
 
   <script>
     document.getElementById("fileInput").addEventListener("change", function(e) {
