--- a/encryption_playground.html
+++ b/encryption_playground.html
@@ -112,7 +112,7 @@
   <button class="btn" onclick="downloadOutput()">Download .txt</button>
 
   <footer style="background-color: #1e1e1e; color: white; padding: 30px 20px; margin-top: 40px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-  <h2 style="color: #9b59b6; margin-bottom: 10px;">💬 Feedback from Ladies & Gentlemen</h2>
+  <h2 style="color: #9b59b6; margin-bottom: 10px;">💬 Feedback from Ladies & Gentlemen team</h2>
   <p style="font-size: 16px; line-height: 1.6;">
     We saw your team project with my team members and it is quite good, and our conclusion is the Encryption Playground works well and shows strong technical skills. 
     The interface is simple and the encryption runs smoothly using CryptoJS. 
@@ -123,7 +123,7 @@
   </p>
 </footer>
   <footer style="background-color: #1e1e1e; color: white; padding: 30px 20px; margin-top: 40px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-  <h2 style="color: #9b59b6; margin-bottom: 10px;">💬 Feedback from GG</h2>
+  <h2 style="color: #9b59b6; margin-bottom: 10px;">💬 Feedback from GG team</h2>
   <p style="font-size: 16px; line-height: 1.6;">
     Encryption Playground – Review
   What’s Good:
