--- a/appscript_info.html
+++ b/appscript_info.html
@@ -63,6 +63,21 @@
       margin-top: 20px;
       border-radius: 6px;
     }
+    pre {
+      background-color: #f4f4f4;
+      padding: 15px;
+      border-radius: 8px;
+      font-size: 16px;
+      font-family: 'Courier New', Courier, monospace;
+      border: 1px solid #ccc;
+      overflow-x: auto;
+    }
+    code {
+      font-family: 'Courier New', Courier, monospace;
+      background-color: #f4f4f4;
+      padding: 2px 4px;
+      border-radius: 4px;
+    }
   </style>
 </head>
 <body>
@@ -209,15 +224,17 @@ SpreadsheetApp.getActive().getRange(...).setBackground(...)
     <ul>
       <li>⚙️ I discovered how to make Apps Script feel less like a hidden tool and more like a bridge between everyday tools like Google Sheets and full automation logic.</li>
       <li>📊 I learned how to plan a data-driven solution: defining structure first, then connecting logic through APIs like <code>SpreadsheetApp</code> and <code>getRange()</code>.</li>
-      <li>📚 I adopted the Feynman Technique—explaining things simply until I truly understood every component. If I couldn’t explain it clearly, I didn’t really understand it yet.</li>
-      <li>🧠 I realized the importance of user-oriented thinking: my CCG calculator had to be intuitive, real-time, and foolproof—not just technically “correct.”</li>
+      <li>📚 I adopted the Feynman Technique—explaining things simply until I truly understood every component. If I couldn’t explain it clearly, I didn’t really understand it yet!</li>
     </ul>
-    <p style="margin-top: 10px;">
-      💬 View the full AI conversation that helped guide this learning:
-      <a href="https://chatgpt.com/share/68132dd6-cec0-8005-869e-fdac3a88dcf9" target="_blank">
-        AI Guidance on Apps Script (ChatGPT)
-      </a>
-    </p>
+  </div>
+
+  <div class="link-section">
+    <h3>🔗 Useful Links & Resources</h3>
+    <ul>
+      <li><a href="https://developers.google.com/apps-script" target="_blank">Google Apps Script Documentation</a></li>
+      <li><a href="https://www.youtube.com/watch?v=gxyAgAjr7_Q" target="_blank">Watch: Mastering Google Apps Script on YouTube</a></li>
+      <li><a href="https://stackexchange.com" target="_blank">StackExchange for coding help</a></li>
+    </ul>
   </div>
 
 </body>
