--- a/appscript_info.html
+++ b/appscript_info.html
@@ -212,20 +212,10 @@ SpreadsheetApp.getActive().getRange(...).setBackground(...)
           <li>Limited execution time (quotas)</li>
           <li>Only works within Google ecosystem</li>
           <li>Debugging can be slow and clunky</li>
-          <li>Documentation is sometimes lacking for advanced tasks</li>
+          <li>Documentation is sometimes lacking for advanced features</li>
         </ul>
       </div>
     </div>
-  </div>
-
-  <div class="section">
-    <h2>🧠 Deep Reflection & Learning Outcomes</h2>
-    <p>This project was not just about coding a feature—it was about learning how to teach, think critically, and communicate with both humans and machines. Here are the key insights:</p>
-    <ul>
-      <li>⚙️ I discovered how to make Apps Script feel less like a hidden tool and more like a bridge between everyday tools like Google Sheets and full automation logic.</li>
-      <li>📊 I learned how to plan a data-driven solution: defining structure first, then connecting logic through APIs like <code>SpreadsheetApp</code> and <code>getRange()</code>.</li>
-      <li>📚 I adopted the Feynman Technique—explaining things simply until I truly understood every component. If I couldn’t explain it clearly, I didn’t really understand it yet!</li>
-    </ul>
   </div>
 
   <div class="link-section">
