--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
   // Password protection for grades
   // Change this to your desired password
-  const correctPassword = "123456";
+  const correctPassword = "2417515";
   
   // Initialize stored grade data
   let gradeData = null;
