--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
   <div class="intro-section">
     <h1>Welcome.</h1>
     <div class="bio">
-      <p>Hello, My name is Abdurakhmon and my id is 2417515.</p>
-      <p>It's my second year at Dong-A university</p>
+      <p>Hello, My name is Abdurakhmon and my student id is 2417515.</p>
+      <p>I'm a sophomore student at Dong-A university</p>
     </div>
   </div>
 
