--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         <li><span class="dot"></span><a href="https://docs.google.com/document/d/1JSBPkXl_SRYdCyEo5RYXZ1wYJgUFFNRge3Hm1JNtai0/edit?tab=t.0">2st assignment (Find me)</a></li>
         <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/dungeon-crawl.html">3rd assignment (Dungeon Crawl)</a></li>
         <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/vlibrary_showcase">4th assignment (Virtual Library)</a></li>
-        <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/team101_documentation">6th assignment (Cryptography Project)</a></li>
+        <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/team101_documentation.html">6th assignment (Cryptography Project)</a></li>
         <li><span class="dot"></span><a href="https://abu-assignments.netlify.app/appscript_info.html">7th assignment (App script)</a></li>
       </ul>
   </div>
